Closed Bug 1408335 Opened 8 years ago Closed 7 years ago

[CSD] Wrong titlebar button icons on some themes

Categories

(Core :: Widget: Gtk, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox58 --- wontfix
firefox59 --- wontfix
firefox60 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Follow up from Bug 1399611 comment 15: Hi all, I am testing the CSD patch on Debian via flatpak. It works quite well except for the fact that superimposed to my icon theme buttons (close and maximize, minimize if present)there is another set of gray icons. Changing the theme, my icons change but the superimposed ones persist. I can't figure out if it is a Flatpak issue or it's due to the program itself.
I noticed that that LWT themes in Windows (I tested W10) also provide icons - we should also implement that for Linux.
Blocks: gtktitlebar
No longer blocks: 1399611
Not sure if this warrants a separate ticket: Just tried CSD in latest nightly and so far it's great! I did notice the close button is slightly off when using the popular Arc Gtk theme https://github.com/horst3180/arc-theme Close button is not centred and fill is the wrong colour. See https://imgur.com/a/raeCR for screenshot comparison of densities
Running KDE neon as the distro here, which basically is the official KDE distro and is always up-to-date with the latest KDE software: https://neon.kde.org/ KDE neon is currently based on Ubuntu 16.04, which uses GTK+ 3.18. This is what it looks like here: https://bugzilla.mozilla.org/attachment.cgi?id=8929825 As you can see, the window controls in the tab bar look odd, which probably is: https://bugzilla.mozilla.org/show_bug.cgi?id=1408335 The other issues like the duplicated window controls and so on are being tracked in: https://bugzilla.mozilla.org/show_bug.cgi?id=1417933
(In reply to Michael Heyns from comment #2) > Not sure if this warrants a separate ticket: > > Just tried CSD in latest nightly and so far it's great! I did notice the > close button is slightly off when using the popular Arc Gtk theme > https://github.com/horst3180/arc-theme > > Close button is not centred and fill is the wrong colour. > > See https://imgur.com/a/raeCR for screenshot comparison of densities I can confirm this behaviour. To expand on it: Here's what it looks like with minimize and maximize buttons: https://imgur.com/a/nlng4 There appears to be a second set of buttons on top of the regular Arc Theme buttons, like described in comment #0. It appears, this issue is present throughout all GTK+ themes I have installed, including Adwaita(-dark), Adapta, Numix-frost and Paper. Using Nightly (20171120)
I'm also seeing that behavior. See attached images. https://imgur.com/a/lEWvE This is 59.0a1 (2017-11-22) (64-bit). Thanks a bunch!
Summary: [CSD] Wrong button rendering on some themes → [CSD] Wrong titlebar button icons on some themes
Assignee: nobody → stransky
Priority: P3 → P2
It's caused by Gtk+ themes with a specific button.titlebutton theming. For instance Arc-Dark defines: .titlebar button.titlebutton.close, .titlebar button.titlebutton.maximize, .titlebar button.titlebutton.minimize { color: transparent; .... } .titlebar button.titlebutton.close { background-image: -gtk-scaled(url("assets/titlebutton-close-dark.png"), url("assets/titlebutton-close-dark@2.png")); } which means default Gtk+ titlebar button is transparent (invisible) and it's completely replaced by background-image.
Depends on: 1427999
Comment on attachment 8941009 [details] Bug 1408335 - Render titlebar icons as themed ones, https://reviewboard.mozilla.org/r/211298/#review222310 ::: widget/gtk/gtkdrawing.h:313 (Diff revision 3) > MOZ_GTK_SCROLLED_WINDOW, > /* Paints a GtkHeaderBar */ > MOZ_GTK_HEADER_BAR, > /* Paints a GtkHeaderBar in maximized state */ > MOZ_GTK_HEADER_BAR_MAXIMIZED, > /* Paints GtkHeaderBar title buttons */ Please add comment that you expect TOOLBAR_BUTTONS number of buttons starting with MOZ_GTK_HEADER_BAR_BUTTON_CLOSE (because you use this value as starting point for pointer to array of buttons cache).
Attachment #8941009 - Flags: review?(jhorak) → review+
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/8fbf1c39eb3b Render titlebar icons as themed ones, r=jhorak
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
There appears to be a regression of this bug, in build 20180303100406 Window buttons look like they did, before bug 1408335 was fixed.
I can confirm that there is a regression that appeared y-day or the day before.
(In reply to Bruno Pagani from comment #17) > I can confirm that there is a regression that appeared y-day or the day > before. Can you please file another bug for that, attach a screenshot and specify which theme do you run. Thanks!
Flags: needinfo?(bruno.n.pagani)
(In reply to Martin Stránský [:stransky] from comment #18) > (In reply to Bruno Pagani from comment #17) > > I can confirm that there is a regression that appeared y-day or the day > > before. > > Can you please file another bug for that, attach a screenshot and specify > which theme do you run. Thanks! Done: https://bugzilla.mozilla.org/show_bug.cgi?id=1443481
Flags: needinfo?(bruno.n.pagani)

I have no idea why this bug just got fixed for me with Firefox 84.0.1 and Ubuntu using Plasma. This is really a major improvement.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: